--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,7 +37,21 @@ http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1"
     	<param-name>primefaces.THEME</param-name>
     	<param-value>cupertino</param-value>
     </context-param>
-  
+    <context-param>
+  		<param-name>primefaces.UPLOADER</param-name>
+  		<param-value>native</param-value>
+	</context-param>
+  	
+  	<filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+        <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+    
   <!-- JSF Servlet is defined to container -->
         <!-- JSF mapping -->	
   <servlet>
